cloud/w10/project-02-secure-operate-gitops-lab/gatekeeper/custom/constraints/allowed-image-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImageRegistry
metadata:
  name: allowed-image-registry
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        admission.gatekeeper.sh/enforce: "true"
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
  parameters:
    allowedPrefix: ghcr.io/heaven229-c/
