cloud/w10/project-02-secure-operate-gitops-lab/gatekeeper/custom/constraints/deployment-replica-limit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDeploymentReplicaLimit
metadata:
  name: deployment-replica-limit
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        admission.gatekeeper.sh/enforce: "true"
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
