cloud/w10/project-02-secure-operate-gitops-lab/gatekeeper/custom/constraints/required-owner-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredWorkloadOwner
metadata:
  name: required-workload-owner
spec:
  enforcementAction: deny
  match:
    namespaceSelector:
      matchLabels:
        admission.gatekeeper.sh/enforce: "true"
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
  parameters:
    labelName: owner
